--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,14 @@ dependencies {
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //design
+    implementation 'com.android.support:design:27.1.1'
+
+    //butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
