--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,16 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+  //android support
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-  testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+  testImplementation 'junit:junit:4.12'
   //retrofit
-  compile 'com.squareup.retrofit2:retrofit:2.4.0'
+  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
   //design
@@ -41,7 +43,10 @@ dependencies {
   implementation 'com.android.support:recyclerview-v7:27.1.1'
 
   //rxjava
-  compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-  compile 'io.reactivex:rxandroid:1.2.1'
-  compile 'io.reactivex:rxjava:1.3.0'
+  implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+  implementation 'io.reactivex:rxandroid:1.2.1'
+  implementation 'io.reactivex:rxjava:1.3.0'
+
+  //picasso
+  implementation 'com.squareup.picasso:picasso:2.71828'
 }
