Added firebase realtime database dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
   //android support
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+  implementation 'com.google.firebase:firebase-database:11.8.0'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -50,3 +51,5 @@ dependencies {
   //picasso
   implementation 'com.squareup.picasso:picasso:2.71828'
 }
+
+apply plugin: 'com.google.gms.google-services'
