--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
   <application
+      android:name=".utils.CreateApplication"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/AppTheme"
-      android:name=".utils.CreateApplication">
+      android:theme="@style/AppTheme">
     <activity android:name=".activity.HomeActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -21,7 +21,9 @@
       </intent-filter>
     </activity>
     <activity android:name=".activity.BaseActivity"/>
-    <activity android:name=".activity.MovieActivity"/>
+    <activity
+        android:name=".activity.MovieActivity"
+        android:theme="@style/MovieTheme"/>
   </application>
 
 </manifest>
