--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
           android:name="android.appwidget.provider"
           android:resource="@xml/favourite_movie_widget_info"/>
     </receiver>
-    <service android:name=".widget.FavouriteMovieWidgetService"/>
+    <service android:name=".widget.FavouriteMovieWidgetService"
+        android:permission="android.permission.BIND_REMOTEVIEWS"/>
   </application>
 
 </manifest>
