Improved the widget layout, currently broken but slowly getting there. Updated the UI  and adding support for multiple widgets, .

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
     </receiver>
     <service android:name=".widget.FavouriteMovieWidgetService"
         android:permission="android.permission.BIND_REMOTEVIEWS"/>
+    <service android:name=".widget.WidgetUpdateService"/>
   </application>
 
 </manifest>
