--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,20 @@
           android:name="android.appwidget.provider"
           android:resource="@xml/favourite_movie_widget_info"/>
     </receiver>
-    <service android:name=".widget.FavouriteMovieWidgetService"
+
+    <service
+        android:name=".widget.FavouriteMovieWidgetService"
         android:permission="android.permission.BIND_REMOTEVIEWS"/>
-    <service android:name=".widget.WidgetUpdateService"/>
+
+    <service
+        android:name=".widget.WidgetUpdateService"
+        android:exported="false">
+      <intent-filter>
+        <action android:name="com.marannix.android.capstone.widgetupdateservice.update_app_widget"/>
+        <action android:name="com.marannix.android.capstone.widgetupdateservice.update_app_widget_list"/>
+      </intent-filter>
+    </service>
+
   </application>
 
 </manifest>
