--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,25 @@
 apply plugin: 'com.android.application'
 
+// Create a variable called keystorePropertiesFile, and initialize it to your
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+
 android {
+  signingConfigs {
+    config {
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
+    }
+  }
   compileSdkVersion 27
   defaultConfig {
     applicationId "com.marannix.android.capstone"
@@ -14,13 +33,13 @@ android {
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      signingConfig signingConfigs.config
     }
   }
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
   //android support
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -29,27 +48,21 @@ dependencies {
   implementation 'com.google.firebase:firebase-core:11.8.0'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
   testImplementation 'junit:junit:4.12'
   //retrofit
   implementation 'com.squareup.retrofit2:retrofit:2.4.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
   //design
   implementation 'com.android.support:design:27.1.1'
-
   //butterknife
   implementation 'com.jakewharton:butterknife:8.8.1'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
   //recyclerview
   implementation 'com.android.support:recyclerview-v7:27.1.1'
-
   //rxjava
   implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
   implementation 'io.reactivex:rxandroid:1.2.1'
   implementation 'io.reactivex:rxjava:1.3.0'
-
   //picasso
   implementation 'com.squareup.picasso:picasso:2.71828'
 }
