Store Api Key in a safe location.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
       signingConfig signingConfigs.config
     }
   }
+
+  buildTypes.each{
+    it.buildConfigField 'String', "API_KEY", API_KEY
+  }
 }
 
 dependencies {
